--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Веб Студія</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
-      <a class="name-header" href="./index.html"><span class="name-title">Web</span>Studio</a>
-      <!--Меню-->  
-      <nav>
-        <ul class="menu-list">                 
-          <li class="menu-item"><a href="./index.html" class="link">Студія</a></li>
-          <li class="menu-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li class="menu-item"><a href="#" class="link">Контакти</a></li>
-        </ul>
-      </nav> 
+      <!--Меню-->
+      <div class="container total-menu">
+        <nav class="menu">
+          <a class="name-header" href="./index.html"><span class="name-title">Web</span>Studio</a>
+          <ul class="menu-list">
+            <li class="menu-item"><a href="./index.html" class="link current-text">Студія</a></li>
+            <li class="menu-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li class="menu-item"><a href="#" class="link">Контакти</a></li>
+          </ul>
+        </nav>
+      </div>
+
       <!--Лінки зв'язку-->
-        <ul class="menu-contacts">
-          <li class="contact-mail"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
-          <li class="contact-tel"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
-        </ul>
+      <ul class="menu-contacts">
+        <li class="contact-mail">
+          <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+        </li>
+        <li class="contact-tel">
+          <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <!--Main-->
     <main>
@@ -39,46 +49,107 @@
       <section class="describe">
         <h2 class="describe-title">Що нас характеризує</h2>
         <ul class="describe-list">
-          <li class="describe-item"><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="describe-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          <li class="describe-item">
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="describe-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
-          <li class="describe-item"><h3>ПУНКТУАЛЬНІСТЬ</h3>        
-            <p class="describe-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <li class="describe-item">
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="describe-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
-          <li class="describe-item"><h3>ПЛАНУВАННЯ</h3>           
-            <p class="describe-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+          <li class="describe-item">
+            <h3>ПЛАНУВАННЯ</h3>
+            <p class="describe-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
-          <li class="describe-item"><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>        
-            <p class="describe-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="describe-item">
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="describe-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
       <!--Чим ми займаємося-->
       <section class="our-business">
-      <h2 class="our-business-title">Чим ми займаємося</h2>        
+        <h2 class="our-business-title">Чим ми займаємося</h2>
         <ul class="our-business-list">
-          <li class="our-business-item"><img src="./images/img1.jpg" alt="Складання алглритмів на ноутбуці" width="370" height="294"></li>
-          <li class="our-business-item"><img src="./images/img2.jpg" alt="Розробкв мобільних додатків" width="370" height="294"></li>
-          <li class="our-business-item"><img src="./images/img3.jpg" alt="Кольорова гама на планшеті" width="370" height="294"></li>
+          <li class="our-business-item">
+            <img
+              src="./images/img1.jpg"
+              alt="Складання алглритмів на ноутбуці"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li class="our-business-item">
+            <img
+              src="./images/img2.jpg"
+              alt="Розробкв мобільних додатків"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li class="our-business-item">
+            <img
+              src="./images/img3.jpg"
+              alt="Кольорова гама на планшеті"
+              width="370"
+              height="294"
+            />
+          </li>
         </ul>
       </section>
       <!--Наша команда-->
       <section class="our-command">
-        <h2 class="our-command-title">Наша команда</h2>     
+        <h2 class="our-command-title">Наша команда</h2>
         <ul class="our-command-list">
-          <li class="our-command-item"><img class="pic-one" src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+          <li class="our-command-item">
+            <img
+              class="pic-one"
+              src="./images/img4.jpg"
+              alt="Ігор Дем'яненко"
+              width="270"
+              height="260"
+            />
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
-          <li class="our-command-item"><img class="pic-two" src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260">
+          <li class="our-command-item">
+            <img
+              class="pic-two"
+              src="./images/img5.jpg"
+              alt="Ольга Рєпіна"
+              width="270"
+              height="260"
+            />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
-          <li class="our-command-item"><img class="pic-three" src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260">
+          <li class="our-command-item">
+            <img
+              class="pic-three"
+              src="./images/img6.jpg"
+              alt="Микола Тарасов"
+              width="270"
+              height="260"
+            />
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
-          <li class="our-command-item"><img class="pic-four" src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260">
+          <li class="our-command-item">
+            <img
+              class="pic-four"
+              src="./images/img7.jpg"
+              alt="Михайло Єрмаков"
+              width="270"
+              height="260"
+            />
             <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
@@ -89,11 +160,22 @@
     <footer class="footer">
       <a class="name-footer" href="index.html"><span class="name-title">Web</span>Studio</a>
       <address>
-        <ul class="adress-list">      
-          <li class="adress-item"><a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li class="adress-item"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-          <li class="adress-item"><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
-        </ul>      
+        <ul class="adress-list">
+          <li class="adress-item">
+            <a
+              href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA"
+              target="_blank"
+              rel="noopener noreferrer"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li class="adress-item">
+            <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+          </li>
+          <li class="adress-item">
+            <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
