--- a/portfolio.html
+++ b/portfolio.html
@@ -1,103 +1,124 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
-      <a class="name-header" href="./index.html"><span class="name-title">Web</span>Studio</a>
-      <!--Меню-->  
-      <nav>
-        <ul class="menu-list">                 
-          <li class="menu-item"><a href="./index.html" class="link">Студія</a></li>
-          <li class="menu-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li class="menu-item"><a href="#" class="link">Контакти</a></li>
-        </ul>
-      </nav> 
+      <!--Меню-->
+      <div class="container total-menu">
+        <nav class="menu">
+          <a class="name-header" href="./index.html"><span class="name-title">Web</span>Studio</a>
+          <ul class="menu-list">
+            <li class="menu-item"><a href="./index.html" class="link">Студія</a></li>
+            <li class="menu-item"><a href="./portfolio.html" class="link current-text">Портфоліо</a></li>
+            <li class="menu-item"><a href="#" class="link">Контакти</a></li>
+          </ul>
+        </nav>
+      </div>
+
       <!--Лінки зв'язку-->
-        <ul class="menu-contacts">
-          <li class="contact-mail"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
-          <li class="contact-tel"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
-        </ul>
+      <ul class="menu-contacts">
+        <li class="contact-mail">
+          <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+        </li>
+        <li class="contact-tel">
+          <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <!--Main-->
     <main>
-        <section class="portfolio">
-            <h1 class="describe-title">Портфоліо з фотографіями</h1>
-            <ul class="portfolio-list">
-                <li class="portfolio-item"><button type="button">Усі</button></li>
-                <li class="portfolio-item"><button type="button">Веб-сайти</button></li>
-                <li class="portfolio-item"><button type="button">Додатки</button></li>
-                <li class="portfolio-item"><button type="button">Дизайн</button></li>
-                <li class="portfolio-item"><button type="button">Маркетинг</button></li>
-            </ul>
-            <ul class="photo-list">
-                <li class="portfolio-img">
-                    <img src="./images/img8.jpg" alt="Ноутбук" width="370" height="294">
-                    <h2>Технокряк</h2>
-                    <p><span class="accent">Веб-сайт</span></p>
-                </li>
-                <li class="photo-img">
-                    <img src="./images/img9.jpg" alt="Баскетбол" width="370" height="294">
-                    <h2>Постер <span lang="en">Orlean vs Golden Star</span></h2>
-                    <p><span class="accent">Дизайн</span></p>
-                </li>
-                <li class="photo-img">
-                    <img src="./images/img10.jpg" alt="Логотип" width="370" height="294">
-                    <h2>Ресторан <span lang="en">Seafood</span></h2>
-                    <p><span class="accent">Додаток</span></p>
-                </li>
-                <li class="photo-img">
-                    <img src="./images/img11.jpg" alt="Навушники" width="370" height="294">
-                    <h2>Проєкт <span lang="en">Prime</span></h2>
-                    <p><span class="accent">Маркетинг</span></p>
-                </li>
-                <li class="photo-img">
-                    <img src="./images/img12.jpg" alt="Упаковка з картону" width="370" height="294">
-                    <h2>Проєкт <span lang="en">Boxes</span></h2>
-                    <p><span class="accent">Додаток</span></p>
-                </li>
-                <li class="photo-img">
-                    <img src="./images/img13.jpg" alt="Монітор" width="370" height="294">
-                    <h2 lang="en">Inspiration has no Borders</h2>
-                    <p><span class="accent">Веб-сайт</span></p>
-                </li>
-                <li class="photo-img">
-                    <img src="./images/img14.jpg" alt="Журнал" width="370" height="294">
-                    <h2>Видання <span lang="en">Limited Edition</span></h2>
-                    <p><span class="accent">Дизайн</span></p>
-                </li>
-                <li class="photo-img">
-                    <img src="./images/img15.jpg" alt="Бірка" width="370" height="294">
-                    <h2>Проєкт <span lang="en">LAB</span></h2>
-                    <p><span class="accent">Маркетинг</span></p>
-                </li>
-                <li class="photo-img">
-                    <img src="./images/img16.jpg" alt="Робоче місце" width="370" height="294">
-                    <h2 lang="en">Growind Business</h2>
-                    <p><span class="accent">Додаток</span></p>
-                </li>
-            </ul>
-        </section>
+      <section class="portfolio">
+        <h1 class="describe-title">Портфоліо з фотографіями</h1>
+        <ul class="portfolio-list">
+          <li class="portfolio-item"><button type="button">Усі</button></li>
+          <li class="portfolio-item"><button type="button">Веб-сайти</button></li>
+          <li class="portfolio-item"><button type="button">Додатки</button></li>
+          <li class="portfolio-item"><button type="button">Дизайн</button></li>
+          <li class="portfolio-item"><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul class="photo-list">
+          <li class="portfolio-img">
+            <img src="./images/img8.jpg" alt="Ноутбук" width="370" height="294" />
+            <h2>Технокряк</h2>
+            <p><span class="accent">Веб-сайт</span></p>
+          </li>
+          <li class="photo-img">
+            <img src="./images/img9.jpg" alt="Баскетбол" width="370" height="294" />
+            <h2>Постер <span lang="en">Orlean vs Golden Star</span></h2>
+            <p><span class="accent">Дизайн</span></p>
+          </li>
+          <li class="photo-img">
+            <img src="./images/img10.jpg" alt="Логотип" width="370" height="294" />
+            <h2>Ресторан <span lang="en">Seafood</span></h2>
+            <p><span class="accent">Додаток</span></p>
+          </li>
+          <li class="photo-img">
+            <img src="./images/img11.jpg" alt="Навушники" width="370" height="294" />
+            <h2>Проєкт <span lang="en">Prime</span></h2>
+            <p><span class="accent">Маркетинг</span></p>
+          </li>
+          <li class="photo-img">
+            <img src="./images/img12.jpg" alt="Упаковка з картону" width="370" height="294" />
+            <h2>Проєкт <span lang="en">Boxes</span></h2>
+            <p><span class="accent">Додаток</span></p>
+          </li>
+          <li class="photo-img">
+            <img src="./images/img13.jpg" alt="Монітор" width="370" height="294" />
+            <h2 lang="en">Inspiration has no Borders</h2>
+            <p><span class="accent">Веб-сайт</span></p>
+          </li>
+          <li class="photo-img">
+            <img src="./images/img14.jpg" alt="Журнал" width="370" height="294" />
+            <h2>Видання <span lang="en">Limited Edition</span></h2>
+            <p><span class="accent">Дизайн</span></p>
+          </li>
+          <li class="photo-img">
+            <img src="./images/img15.jpg" alt="Бірка" width="370" height="294" />
+            <h2>Проєкт <span lang="en">LAB</span></h2>
+            <p><span class="accent">Маркетинг</span></p>
+          </li>
+          <li class="photo-img">
+            <img src="./images/img16.jpg" alt="Робоче місце" width="370" height="294" />
+            <h2 lang="en">Growind Business</h2>
+            <p><span class="accent">Додаток</span></p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!--Footer-->
     <footer class="footer">
       <a class="name-footer" href="index.html"><span class="name-title">Web</span>Studio</a>
       <address>
-        <ul class="adress-list">      
-          <li class="adress-item"><a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li class="adress-item"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-          <li class="adress-item"><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
-        </ul>      
+        <ul class="adress-list">
+          <li class="adress-item">
+            <a
+              href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA"
+              target="_blank"
+              rel="noopener noreferrer"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li class="adress-item">
+            <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+          </li>
+          <li class="adress-item">
+            <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
-</html>    
+</html>
