--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <!--Меню-->
       <div class="container total-menu">
         <nav class="menu">
-          <a class="name-header" href="./index.html"><span class="name-title">Web</span>Studio</a>
+          <a class="name-header" href="./index.html" lang="en"
+            ><span class="name-title">Web</span>Studio</a
+          >
           <ul class="menu-list">
             <li class="menu-item"><a href="./index.html" class="link current-text">Студія</a></li>
             <li class="menu-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
@@ -43,32 +45,32 @@
       <!--Шапка-->
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <button class="hero-button" type="button">Замовити послугу</button>
       </section>
       <!--Особливості-->
       <section class="describe">
         <h2 class="describe-title">Що нас характеризує</h2>
         <ul class="describe-list">
           <li class="describe-item">
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="describe-article">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="describe-text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li class="describe-item">
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="describe-article">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="describe-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
           <li class="describe-item">
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="describe-article">ПЛАНУВАННЯ</h3>
             <p class="describe-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li class="describe-item">
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="describe-article">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="describe-text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
@@ -110,73 +112,56 @@
         <h2 class="our-command-title">Наша команда</h2>
         <ul class="our-command-list">
           <li class="our-command-item">
-            <img
-              class="pic-one"
-              src="./images/img4.jpg"
-              alt="Ігор Дем'яненко"
-              width="270"
-              height="260"
-            />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <div class="pic-worker">
+              <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+              <h3 class="our-name">Ігор Дем'яненко</h3>
+              <p class="our-job" lang="en">Product Designer</p>
+            </div>
           </li>
           <li class="our-command-item">
-            <img
-              class="pic-two"
-              src="./images/img5.jpg"
-              alt="Ольга Рєпіна"
-              width="270"
-              height="260"
-            />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <div class="pic-worker">
+              <img src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+              <h3 class="our-name">Ольга Рєпіна</h3>
+              <p class="our-job" lang="en">Frontend Developer</p>
+            </div>
           </li>
           <li class="our-command-item">
-            <img
-              class="pic-three"
-              src="./images/img6.jpg"
-              alt="Микола Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <div class="pic-worker">
+              <img src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260" />
+              <h3 class="our-name">Микола Тарасов</h3>
+              <p class="our-job" lang="en">Marketing</p>
+            </div>
           </li>
           <li class="our-command-item">
-            <img
-              class="pic-four"
-              src="./images/img7.jpg"
-              alt="Михайло Єрмаков"
-              width="270"
-              height="260"
-            />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <div class="pic-worker">
+              <img src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+              <h3 class="our-name">Михайло Єрмаков</h3>
+              <p class="our-job" lang="en">UI Designer</p>
+            </div>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a class="name-footer" href="index.html"><span class="name-title">Web</span>Studio</a>
-      <address>
-        <ul class="adress-list">
-          <li class="adress-item">
-            <a
-              href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA"
-              target="_blank"
-              rel="noopener noreferrer"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="adress-item">
-            <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
-          </li>
-          <li class="adress-item">
-            <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="footer-block">
+        <a class="name-footer" href="index.html" lang="en"
+          ><span class="name-title">Web</span>Studio</a
+        >
+        <address>
+          <ul class="adress-list">
+            <li class="adress-item">
+              <a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li class="adress-item">
+              <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+            </li>
+            <li class="adress-item">
+              <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
